--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -1,5 +1,4 @@
 - name: Clean Up Broken or Missing Data Guard Wallets
-  when: unlock_system_passwords is not defined
   block:
     - name: Set up oracle database home
       shell: |
@@ -34,7 +33,6 @@
 
 # Disable OEM Native Monitoring to avoid noise due to agent / broker connection failures during password changes
 - name: Disable Monitoring
-  when: unlock_system_passwords is not defined and not oem_blackout_required | default(false)
   block:
     - name: Start database monitoring blackout
       include_role:
@@ -80,16 +78,13 @@
     APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text)
     [ "${APPLICATION}" == "delius" ] && echo {{ environment_name }}-oracle-db-dba-passwords || echo {{ environment_name }}-oracle-{{ database_type }}-db-dba-passwords
   register: build_secret_name
-  #when: database_primary_sid is defined
 
 - name: Set Secret Manager Name
   set_fact:
     secret_name: "{{ build_secret_name.stdout }}"
-  #when: database_primary_sid is defined
 
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
-  when: unlock_system_passwords is not defined
   block:
     # Do not specify database login credentials as will login as SYS on primary
     - name: Set Profile for DBSNMP on Primary
@@ -160,6 +155,9 @@
           register: getsystemsecret
 
         - name: Remember Existing SYSTEM Password
+          delegate_to: localhost
+          delegate_facts: true
+          become: no
           set_fact:
             original_system_password: "{{ getsystemsecret.stdout }}"
 
@@ -176,6 +174,9 @@
 
     # New Password will be overwritten by change of DELIUS_APP_SCRIPTS password, so record it in a variable
     - name: Remember New Delius SYSTEM Password
+      delegate_to: localhost
+      delegate_facts: true
+      become: no
       set_fact:
         new_system_password: "{{ new_password }}"
       when:
@@ -215,8 +216,8 @@
           include_tasks: rotate_wallet_password.yml
           when: alfresco_wallet.stat.exists
           vars:
-            before_password: "{{ original_system_password }}"
-            after_password: "{{ new_system_password }}"
+            before_password: "{{ hostvars['localhost']['original_system_password'] }}"
+            after_password: "{{ hostvars['localhost']['new_system_password'] }}"
             path_to_wallet: "{{ wallet_dir }}"
             recreate_wallet_code_location: "{{ playbook_dir }}/../alfresco_wallet/alfresco_wallet"
 
@@ -246,11 +247,11 @@
     - name: Rotate Oracle Password
       include_tasks: rotate_oracle_password.yml
 
+    # Only need to update OEM targets monitoring passwords once,
+    # therefore perform when on primary database
     - name: Synchronise OEM Monitoring Passwords
       include_tasks: update_oem_targets.yml
-      when:
-        - rotate_passwords_not_from_oem | default(false)
-        - database_primary_sid is defined
+      when: database_primary_sid is defined
 
   # Restart Monitoring regardless of success of password rotation
   always:
@@ -294,4 +295,3 @@
     loop_var: username
   when:
     - database_primary_sid is defined
-    - unlock_system_passwords is defined or rotate_passwords_not_from_oem | default(false)
