--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -2,21 +2,11 @@
   set_fact:
     secretsmanager_passwords_dict: {}
 
-- name: Setup Temporary Secrets Dictionary For Non OEM Running From OEM
-  set_fact:
-    secret_password_dict:
-      account:
-        account_name: "{{ target_account_name }}"
-        assume_role_name: "EC2OracleEnterpriseManagementSecretsRole"
-        secret: "{{ secret_name }}"
-  when: not target_environment_name is search('hmpps-oem') and emcli_login is not defined
-
-- name: Setup Temporary Secrets Dictionary For OEM and Non OEM (Not Running From OEM)
+- name: Setup Temporary Secrets Dictionary
   set_fact:
     secret_password_dict:
       account:
         secret: "{{ secret_name }}"
-  when: target_environment_name is search('hmpps-oem') or emcli_login is defined
 
 - name: Combine {{ db_username }} User To Secrets Dictionary
   set_fact:
