Include synchronise OEM targets task

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
@@ -4,7 +4,6 @@
 
 # Disable OEM Native Monitoring to avoid noise due to agent / broker connection failures during password changes
 - name: Disable Monitoring
-  when: unlock_system_passwords is not defined
   block:
     - name: Start database monitoring blackout
       include_role:
@@ -31,7 +30,6 @@
 # This will usually be the OEM Repository database and RMAN catalog database
 
 - name: Rotate OEM Related Database Passwords
-  when: unlock_system_passwords is not defined
   block:
     - name: Rotate OEM and RMAN Database Passwords
       include_tasks: rotate_oem_database_passwords.yml
@@ -60,6 +58,9 @@
 
     - name: Rotate Oracle Password
       include_tasks: rotate_oracle_password.yml
+
+    - name: Synchronise OEM Monitoring Passwords
+      include_tasks: update_oem_targets.yml
 
   # Restart Monitoring regardless of success of password rotation
   always:
@@ -97,4 +98,3 @@
   with_nested:
     - ["sys", "system", "dbsnmp"]
     - ["{{ db_configs['RCVCAT']['rcvcat_db_name'] }}", "{{ db_configs['EMREP']['emrepo_db_name'] }}"]
-  when: unlock_system_passwords is defined
