Simplify host match

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -1,29 +1,12 @@
 - name: Sync SYS Password Parameter in the {{ target_environment_name }}
   block:
-    - name: Work Out Host Match And Environment
-      when: not target_environment_name is search('hmpps-oem')
-      block:
-        - name: Get EC2 Metadata Facts
-          amazon.aws.ec2_metadata_facts:
 
-        - name: Set Target Account Name For Secrets
-          set_fact:
-            target_account_name: "{{ target_environment_name.split('-')[:2] | join('-') + '-' + aws_environment }}"
+    - name: Work Out Host Match
+      block:
 
         - name: Set Host Match
           set_fact:
-            host_match: "{{ target_environment_name }}"
-
-    - name: Work Out Host Match and Environment (OEM)
-      when: target_environment_name is search('hmpps-oem')
-      block:
-        - name: Set Environment (OEM)
-          set_fact:
-            secret_environment: "{{ oemdb_secretsmanager_passwords['oemdb']['secret'] }}"
-
-        - name: Set Host Match (OEM)
-          set_fact:
-            host_match: "{{ inventory_hostname }}"
+            host_match: "{{ target_environment_name if (not target_environment_name is search('hmpps-oem')) else inventory_hostname }}"
 
     - name: Initialise Monitor List
       set_fact:
@@ -52,7 +35,7 @@
         - name: Set the Monitoring Credentials for Physical Standby Databases
           include_tasks: set_monitoring_password.yml
           vars:
-            secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
+            secret_name: "{{ '/oracle/database/' + target_env.split()[0] + '/passwords' if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
             db_username: sys
             monitor_type: oracle_database
             monitor_role: SYSDBA
@@ -93,12 +76,12 @@
     - name: Narrow Monitor Primary Database List If Not From OEM
       set_fact:
         monitor_list: "{{ monitor_list | select('match','^' + database_primary_sid + '.*$') }}"
-      when: rotate_passwords_not_from_oem | default(false)
+      when: not target_environment_name is search('hmpps-oem')
 
     - name: Set the Monitoring Credentials for Primary Databases
       include_tasks: set_monitoring_password.yml
       vars:
-        secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
+        secret_name: "{{ '/oracle/database/' + target_env.split()[0] + '/passwords' if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: dbsnmp
         monitor_type: oracle_database
         monitor_role: Normal
@@ -133,7 +116,7 @@
     - name: Narrow Monitor ASM List If Not From OEM
       set_fact:
         monitor_list: "{{ monitor_list | select('match','^.*' + inventory_hostname | regex_replace('^(.*-db-)\\d{1}','\\1') + '.*$') }}"
-      when: rotate_passwords_not_from_oem | default(false)
+      when: not target_environment_name is search('hmpps-oem')
 
     - name: Set the Monitoring Credentials for ASM Instances
       include_tasks: set_monitoring_password.yml
