--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -163,6 +163,7 @@ jobs:
             playbooks/oracle_ha
             playbooks/alfresco_wallet
             playbooks/ansible.cfg
+            common/*
           path: operations
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
