--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
@@ -2,10 +2,10 @@
 
 - name: Rotate Database Passwords
   include_tasks: non_oem_database_passwords.yml
-  when: not environment_name is search('hmpps-oem')
+  when: not target_environment_name is search('hmpps-oem')
 
 # Distinguish OEM environments
 
 - name: Rotate OEM Database Passwords
   include_tasks: oem_database_passwords.yml
-  when: environment_name is search('hmpps-oem')
+  when: target_environment_name is search('hmpps-oem')
