Blackout name change

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
@@ -23,7 +23,7 @@
         tasks_from: script_exclusion.yml
       vars:
         action: "start"
-        blackout: "PASSWORD_ROTATION_{{ environment_name }}"
+        blackout: "PASSWORD_ROTATION_{{ inventory_hostname }}"
         duration: 7200
 
 # Check the databases configured on the OEM server.
