Tm 633 aws directory service data automation (#455)
* feat: add mis user and group automation

* fix: yaml to yml

* fix: don't manage default users and groups

* chore: add disabled_users to yaml

* fix: add environment for job

--- a/.github/workflows/mis-ad-user-group-sync.yml
+++ b/.github/workflows/mis-ad-user-group-sync.yml
@@ -26,6 +26,8 @@ jobs:
         env_name: ${{ github.event_name == 'push' && fromJson('["dev", "stage", "preprod"]') || fromJson(format('["{0}"]', github.event.inputs.environment)) }}
 
     runs-on: ubuntu-latest
+    environment: delius-mis-${{ matrix.env_name }}-preapproved
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
