--- a/mis-directory/mis-users.yml
+++ b/mis-directory/mis-users.yml
@@ -13,7 +13,7 @@ users:
       - group2
   - username: jdoe
     first_name: Jane
-    lastjson_name: Doe
+    last_name: Doe
     email: jdoe@company.com
     groups:
       - group2
