Setup secrets dict when syncing monitoring passwords from OEM

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -7,6 +7,28 @@
     secret_password_dict:
       account:
         secret: "{{ secret_name }}"
+  when: (not sync_monitoring_passwords | default(false) | bool) or ((sync_monitoring_passwords | default(false) | bool) and (target_environment_name is search('hmpps-oem')))
+
+- name: Special Case To Setup Secrets Dictionary Syncing Monitoring Passwords From OEM For None OEM Target Environment
+  when:
+    - sync_monitoring_passwords | default(false) | bool
+    - not target_environment_name is search('hmpps-oem')
+  block:
+
+    - name: Get EC2 Metadata Facts
+      amazon.aws.ec2_metadata_facts:
+
+    - name: Set Target Account Name For Secrets
+      set_fact:
+        target_account_name: "{{ target_environment_name.split('-')[:2] | join('-') + '-' + aws_environment }}"
+
+    - name: Setup Secrets Dictionary Syncing Monitoring Passwords From OEM
+      set_fact:
+        secret_password_dict:
+          account:
+            account_name: "{{ target_account_name }}"
+            assume_role_name: "EC2OracleEnterpriseManagementSecretsRole"
+            secret: "{{ secret_name }}"
 
 - name: Combine {{ db_username }} User To Secrets Dictionary
   set_fact:
