--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -1,10 +1,8 @@
 - name: Sync SYS Password Parameter in the {{ target_environment_name }}
   block:
-    - name: Work Out Host Match
-      block:
-        - name: Set Host Match
-          set_fact:
-            host_match: "{{ target_environment_name if (not target_environment_name is search('hmpps-oem')) else inventory_hostname }}"
+    - name: Set Host Match
+      set_fact:
+        host_match: "{{ target_environment_name if (not target_environment_name is search('hmpps-oem')) else inventory_hostname }}"
 
     - name: Initialise Monitor List
       set_fact:
@@ -74,7 +72,9 @@
     - name: Narrow Monitor Primary Database List If Not From OEM
       set_fact:
         monitor_list: "{{ monitor_list | select('match','^' + database_primary_sid + '.*$') }}"
-      when: not target_environment_name is search('hmpps-oem')
+      when:
+        - not target_environment_name is search('hmpps-oem')
+        - not group_names is search('server_type_hmpps_oem')
 
     - name: Set the Monitoring Credentials for Primary Databases
       include_tasks: set_monitoring_password.yml
@@ -114,7 +114,9 @@
     - name: Narrow Monitor ASM List If Not From OEM
       set_fact:
         monitor_list: "{{ monitor_list | select('match','^.*' + inventory_hostname | regex_replace('^(.*-db-)\\d{1}','\\1') + '.*$') }}"
-      when: not target_environment_name is search('hmpps-oem')
+      when:
+        - not target_environment_name is search('hmpps-oem')
+        - not group_names is search('server_type_hmpps_oem')
 
     - name: Set the Monitoring Credentials for ASM Instances
       include_tasks: set_monitoring_password.yml
