Command to call script

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_agent_registration_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_agent_registration_password.yml
@@ -11,16 +11,12 @@
   vars:
     secretsmanager_passwords: "{{ agent_secretsmanager_passwords }}"
 
-- name: Get Existing SYSMAN Password
-  shell: |
-    export PATH=$PATH:/usr/local/bin
-    aws secretsmanager get-secret-value --secret-id "{{ oem_secretsmanager_passwords['oem']['secret'] }}" --query SecretString --output text| jq -r .sysman
-  changed_when: false
-  register: "getsysmanpassword"
-  no_log: true
-
 - name: Set Agent Registration Password
-  shell: "{{ emctl_oem }} secure setpwd ${SYSMAN_PASSWORD} ${AGENT_REGISTRATION_PASSWORD}"
+  ansible.builtin.command: >
+    {{ emctl_script }}
   environment:
-    SYSMAN_PASSWORD: "{{ getsysmanpassword.stdout }}"
-    AGENT_REGISTRATION_PASSWORD: "{{ new_password }}"
+    ROTATE: AGENT
+  register: agent_registration
+  failed_when:
+    - agent_registration.rc > 0
+    - not agent_registration.stdout is search('Registration Password added successfully')
